# stock-value-forecast

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  config.example.js  index.html  netlify.toml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  vercel.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
api/: yahoo.js
configs/: default.yaml  live_apis.yaml  recruiter_demo.yaml  recruiter_demo_real.yaml
css/: style.css
deploy_artifacts/reports/: latest_feature_importance.json  latest_metrics.json  latest_predictions.csv
docs/: alpha-vantage-free-tier.md  artifacts.md  config.md  logging.md  packaging.md  typed-contracts.md
frontend/: README.md  api_client.py  app.py  data_access.py  format.py  requirements.txt
js/: forecastEngine.js  main.js  mlForecastEngine.js  newsFeed.js  relevancyAnalyzer.js  stockManager.js
netlify/functions/: relevancy.js  yahoo.js
reports/: latest_metrics.json
scripts/: run-demo-real.sh  wait-for-backend.sh
src/: __init__.py  __main__.py  _cli.py  logging_config.py  types.py
src/config/: __init__.py  loader.py  models.py  secrets.py  validation.py
src/core/: __init__.py  artifacts.py  paths.py
src/data/: __init__.py  build_manifest.py  manifest.py  (+2 more)
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_eval.py  test_features.py  test_ingest_prices.py  test_ingest_schema.py  test_integration_e2e.py  test_leakage_invariants.py  test_manifest.py  test_news_ingest.py  test_pipeline_timeseries.py  test_sample_integration.py  test_sentiment.py  test_serve_app.py  test_train.py  test_validate_prices_csv.py
(+75 files in other folders)
