[project]
name = "stock-value-forecast"
version = "0.1.0"
description = "ML pipeline for short-horizon stock trend forecasting"
readme = "README.md"
requires-python = ">=3.9"

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = ["venv", ".venv", "__pycache__", ".git", "data", "models", "reports"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
