[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-value-forecast"
version = "0.1.0"
description = "ML pipeline for short-horizon stock trend forecasting"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "pandas>=1.5.0",
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "tensorflow>=2.15,<2.16",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
stock-forecast = "run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools]
py-modules = ["run"]

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = ["venv", ".venv", "__pycache__", ".git", "data", "models", "reports"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
